--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -225,6 +225,14 @@ jobs:
           name: kustomize-manifest-builder
           context: kustomize-manifest-builder
 
+      - name: cdk8s-manifest-builder
+        uses: ./.github/workflows/actions/image
+        env:
+          SNYK_TOKEN: ${{secrets.SNYK_TOKEN}}
+        with:
+          name: cdk8s-manifest-builder
+          context: cdk8s-manifest-builder
+
       - name: Move cache
         run: |
           rm -rf /tmp/.buildx-cache
